--- a/views/takeQuestion.ejs
+++ b/views/takeQuestion.ejs
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>takeQuestion</title>
+    <script src="/javascripts/jquery-1.11.2.min.js"></script>
+    <script src="/javascripts/takeQuestion.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/bootstrap.min.css'/>
 </head>
@@ -62,7 +64,7 @@
 
        <span> Correct Answer:</span><br/><input type="text" name="correctAnswer" class="questiontext"></li><br/><br/>
 
-    <button class="btn btn-default submit_button" value="Submit" id="submit">Submit</button>
+    <button class="btn btn-default submit_button"  id="submit">Submit</button>
 
 
 </form>
