today work 1:maintain session. 2:redirect to pages 3:

--- a/views/Signup.ejs
+++ b/views/Signup.ejs
@@ -10,6 +10,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/bootstrap.min.css'/>
 
+
    <!-- <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>-->
 </head>
 <body>
@@ -46,7 +47,7 @@
 
     <div class="container">
         <div class="row">
-            <form action="">
+            <div>
                 <div class="col-lg-6"><br/><br/><br/>
 
                     <div class="form-group">
@@ -71,10 +72,10 @@
                             <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
                         </div>
                     </div>
-                    <button type="submit" id="submit1" class="btn btn-info pull-right">Submit</button>
+                   <button  id="submit1" class="btn btn-info pull-right">Submit</button>
 
                 </div>
-            </form>
+            </div>
 
 
 
