--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <form class="form-inline" >
+    <div >
 
     <div class="panel panel-primary index_textbox" align="center" >
         <div class="panel-body">
@@ -46,11 +46,11 @@
         <label class="checkbox">
             <input type="checkbox">Remember
         </label><br/><br/>
-        <button type="submit" id="submit" class="btn">Submit</button>
+        <button  id="submit" class="btn">Submit</button>
         <a type="submit" class="btn" href="\Signup">SignUP</a>
         </div>
     </div>
-  </form>
+  </div>
 
 
 
