--- a/views/takeQuestion.ejs
+++ b/views/takeQuestion.ejs
@@ -36,12 +36,12 @@
 </div>
 <div class="panel panel-primary" align="center">
 <div align="center"><br/>
-    <span>Select quiz here</span><select class="text_color"><br/>
-        <option>Html</option>
-        <option>Css</option>
-        <option>PHP</option>
-        <option>Sql</option>
-        <option>Html</option>
+    <span>Select quiz here</span><select class="text_color" id="select1"><br/>
+        <!--<option></option>
+        <option></option>
+        <option></option>
+        <option></option>
+        <option></option>-->
 
 
     </select>
