--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,15 @@
-body {
+html,body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    /*background-image: url("../images/background.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+   */
 }
 
 a {
   color: #00B7FF;
+
 }
 .text_color{
    background-color: #ffffff;
@@ -33,4 +38,9 @@ a {
 }
 .h4{
     text-decoration: underline;
+}
+.b{
+    color:#ffffff;
+    text-align: center;
+    height: 0;
 }
