1.Id task done. 2.display quiz page . 3.display quiz question by quiz id.

--- a/views/QuestionAnswer.ejs
+++ b/views/QuestionAnswer.ejs
@@ -57,7 +57,7 @@
 
 
 <div>
-    <form>
+   <!-- <form>
         <span><label>Question1:</label>What is your country name?</span><br/>
     <ol id="myList">
 
@@ -67,9 +67,40 @@
         <li> <input type="radio" class="ans" value="a4">America </li>
         <li> <input type="radio"  class="ans" value="a5">Canada </li>
 
-    </ol>
-    <button id="submitAns">submit</button>
-        </form>
+    </ol>-->
+    <div class="container">
+        <div class="col-md-2"></div>
+        <div class="form-group col-md-8" style="margin-top: 15%;">
+
+            <div class="form-horizontal">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><span id="ques"></span>
+                        </h3>
+                    </div>
+                    <div class="panel-body">
+                        <br>
+                        <!--            <br>
+                                    <br>
+                                    <br>
+                                    <br>-->
+                        <div class="list-group">
+                            <input type="radio" class="ans" name="ans" value="a1" >
+                            <a  class="list-group-item" id="ans1">
+                            </a><br>
+                            <input type="radio" class="ans" name="ans" value="a2" >
+                            <a  class="list-group-item" id="ans2">
+                            </a><br>
+                            <input type="radio" class="ans" name="ans" value="a3" >
+                            <a  class="list-group-item" id="ans3">
+                            </a><br>
+                            <input type="radio" class="ans" name="ans" value="a4" >
+                            <a  class="list-group-item" id="ans4">
+                            </a><br>
+                        </div>
+
+                        <button id="submitAns">submit</button>
+
 </div>
 
 
