--- a/views/takeQuestion.ejs
+++ b/views/takeQuestion.ejs
@@ -62,7 +62,7 @@
         <li><input type="text" name="answer4"id="answer4" class="textbox"> </li><br/>
    </ol>
 
-       <span> Correct Answer:</span><br/><input type="text" name="correctAnswer" class="questiontext"></li><br/><br/>
+       <span> Correct Answer:</span><br/><input type="text" name="correctAnswer" id="correctAnswer" class="questiontext"></li><br/><br/>
 
     <button class="btn btn-default submit_button"  id="submit">Submit</button>
 
