--- a/views/takeQuestion.ejs
+++ b/views/takeQuestion.ejs
@@ -56,10 +56,10 @@
     <br>
     <span>Option</span>
     <ol>
-        <li><input type="text" name="answer1" id="answer1" class="textbox"> </li><br/>
-        <li><input type="text" name="answer2"  id=answer2 class="textbox"> </li><br/>
-        <li><input type="text" name="answer3"  id="answer3"class="textbox"> </li><br/>
-        <li><input type="text" name="answer4"id="answer4" class="textbox"> </li><br/>
+        <li><input type="radio" name="radio1" value="answer1"><input type="text" name="answer1" id="answer1" class="textbox"> </li><br/>
+        <li><input type="radio" name="radio1" value="answer2"><input type="text" name="answer2"  id=answer2 class="textbox"> </li><br/>
+        <li><input type="radio" name="radio1" value="answer3"><input type="text" name="answer3"  id="answer3"class="textbox"> </li><br/>
+        <li><input type="radio" name="radio1" value="answer4"><input type="text" name="answer4"id="answer4" class="textbox"> </li><br/>
    </ol>
 
        <span> Correct Answer:</span><br/><input type="text" name="correctAnswer" id="correctAnswer" class="questiontext"></li><br/><br/>
