--- a/views/QuestionAnswer.ejs
+++ b/views/QuestionAnswer.ejs
@@ -4,14 +4,19 @@
     <title>QuestionAnswer</title>
     <script src="/javascripts/jquery-1.11.2.min.js"></script>
     <script src="/javascripts/QuestionAnswer.js"></script>
+
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/bootstrap.min.css'/>
 </head>
 <body>
 
 
-<div class="navbar navbar-default">
-    <div class="navbar-header">
+<div class="navbar navbar-default navbar-fixed-top">
+    <a class="navbar-brand" href="#">
+        <b>The quiz taker</b>
+
+    </a>
+    <!--<div class="navbar-header navbar-fixed-top">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -35,25 +40,27 @@
                     <li><a href="#">One more separated link</a></li>
                 </ul>
             </li>
-        </ul>
-        <form class="navbar-form navbar-left">
-            <input type="text" class="form-control col-lg-8" placeholder="Search">
-        </form>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Link</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+        </ul>-->
+    <!-- <form class="navbar-form navbar-left">
+         <input type="text" class="form-control col-lg-8" placeholder="Search">
+     </form>-->
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+            </ul>
+        </li>
+    </ul>
 </div>
+</div>
+
+<div>
 
 
 <div>
@@ -85,21 +92,31 @@
                                     <br>
                                     <br>-->
                         <div class="list-group">
-                            <input type="radio" class="ans" name="ans" value="a1" >
+                            <input type="radio" class="ans" name="ans" value="answer1" >
                             <a  class="list-group-item" id="ans1">
                             </a><br>
-                            <input type="radio" class="ans" name="ans" value="a2" >
+                            <input type="radio" class="ans" name="ans" value="answer2" >
                             <a  class="list-group-item" id="ans2">
                             </a><br>
-                            <input type="radio" class="ans" name="ans" value="a3" >
+                            <input type="radio" class="ans" name="ans" value="answer3" >
                             <a  class="list-group-item" id="ans3">
                             </a><br>
-                            <input type="radio" class="ans" name="ans" value="a4" >
+                            <input type="radio" class="ans" name="ans" value="answer4" >
                             <a  class="list-group-item" id="ans4">
                             </a><br>
-                        </div>
+                        </div><br/>
+                        <div class="mini_container">
 
-                        <button id="submitAns">submit</button>
+                        <button id="next">Next</button></div>
+                        <button id="result" style="visibility: hidden">Show Result</button></div>
+
+                      <!--  <div id="showbutton">
+
+                        </div>
+-->
+                        <p id="submitError">Please choose an answer before proceeding to the next question</p>
+
+                       <!-- <button id="submitAns">submit</button>-->
 
 </div>
 
